# vladxleb

./: Dockerfile  db.sqlite3  manage.py  pyproject.toml
cargo/: urls.py  wsgi.py
cargo/settings/: base.py  dev.py
cargo/static/css/: main.css
cargo/static/js/: trucking.js
cargo/templates/: base.html
cargo/templates/account/: login.html  signup.html
cargo/templates/allauth/layouts/: base.html
home/: blocks.py  models.py  views.py
home/migrations/: 0003_routeindexpage_alter_homepage_options_routepage.py
home/templates/blocks/: expedition_block.html
home/templates/home/: home_page.html
users/: models.py
users/migrations/: 0001_initial.py
